data/usersCode/zxvczxc/question1/error.txt
/home/gauravghati/clash/data/usersCode/zxvczxc/question1/code1-0.cpp:1:1: error: ‘asnda’ does not name a type
 asnda,sc,xnasudiauwqw
 ^~~~~
